<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context="kr.soen.project_base_2.MainActivity"
    android:weightSum="1">

<!--제목-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="80sp"
        android:textColor="#AA000000"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="1">
<!--Photo, Pad 그림-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Empty"/>

        <ImageButton
            android:id="@+id/Photo"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_local_see_black_24dp"
            android:gravity="center"
            android:contentDescription="@string/Error"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Empty"/>
        <ImageButton
            android:id="@+id/Pad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/ic_create_black_24dp"
            android:gravity="center"
            android:contentDescription="@string/Error"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Empty"/>

    </LinearLayout>

    <!--Photo,Pad 글씨-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Empty"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Photo"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Empty"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Pad"
            android:gravity="center"
            android:textStyle="bold"/>



        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Empty"/>


    </LinearLayout>

    <!--메뉴 사이 공백-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Empty"/>

    </LinearLayout>


<!--Map, Exit 그림-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Empty"/>

        <ImageButton
            android:id="@+id/Map"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_import_contacts_black_24dp"
            android:gravity="center"
            android:contentDescription="@string/Error"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Empty"/>
        <ImageButton
            android:id="@+id/Exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/ic_close_black_24dp"
            android:gravity="center"
            android:contentDescription="@string/Error"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Empty"/>

    </LinearLayout>

    <!--Map, Exit 글씨-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Empty"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Map"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Empty"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Exit"
            android:gravity="center"
            android:textStyle="bold"/>



        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/Empty"/>


    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="LOGIN" />


</LinearLayout>

